# uk-property-search

./: .buildpacks  .gitignore  Procfile  README.md  startup  uk-property-search.code-workspace
uk-property-search-app/: .eslintrc.js  README.md  package-lock.json  package.json  quasar.conf.js
uk-property-search-app/src/: App.vue
uk-property-search-app/src/api/: api.ts  last-updated-api.ts  property-api.ts  schools-api.ts  tube-api.ts
uk-property-search-app/src/boot/: api.js  api.ts  leaflet.ts  pinia.ts
uk-property-search-app/src/components/: LeafletMap.vue
uk-property-search-app/src/layouts/: MainLayout.vue  PropertyStatsLayout.vue
uk-property-search-app/src/models/: crime.ts  last-updated.ts  property.ts  school.ts  tube.ts
uk-property-search-app/src/pages/: CrimesPage.vue  ErrorPage.vue  HomePage.vue  PropertyPage.vue  SchoolsPage.vue  TurnoverPage.vue
uk-property-search-app/src/pages/property/: PropertyListingsAgePage.vue  PropertyPopularityPage.vue  PropertyPricesPage.vue  PropertySizesPage.vue  PropertyTurnoverPage.vue  PropertyYieldPage.vue
uk-property-search-app/src/router/: routes.ts
uk-property-search-app/src/store/: index.ts
uk-property-search-app/src/store/property/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
uk-property-search-app/src/store/schools/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
uk-property-search-app/src/store/tube/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
uk-property-search-app/src/stores/: last-updated.ts  property.ts  school.ts  tube.ts
uk-property-search-app/src/util/: sleep.ts
uk-property-search-data/: .gitignore  Cargo.toml  properties.toml
uk-property-search-data/assets/: London stations.csv  London tube lines.csv
uk-property-search-data/src/: cli.rs  main.rs
uk-property-search-data/src/lib/: mod.rs  property.rs  school.rs  tube.rs
uk-property-search-data/src/lib/estate_agents/: mod.rs  rightmove.rs
uk-property-search-data/src/lib/math/: stats.rs
uk-property-search-data/src/lib/property/: aggregator.rs  mod.rs  property.rs
uk-property-search-data/src/lib/property/estate_agents/: mod.rs  property_log.rs  rightmove.rs
uk-property-search-data/src/lib/tube/: mod.rs  tube.rs  tube_api.rs  tube_map.rs
uk-property-search-data/src/lib/util/: db.rs  ext.rs  globals.rs  http.rs  lang.rs  mod.rs  properties.rs
uk-property-search-data/src/tasks/: mod.rs  update_property.rs  update_schools.rs  update_tube.rs
